Fixed some build warnings and errors: use `usethis::use_package()` to declare package dependencies to packages used in the vignettes

--- a/README.Rmd
+++ b/README.Rmd
@@ -25,7 +25,7 @@ By clicking on [here](https://niloofarnl.github.io/Populationpack2016/reference/
 
 You can install the development version of Populationpack2016 like so:
 
-```{r setup, message=FALSE, force = TRUE}
+```
 knitr::opts_chunk$set(message = FALSE)
 if(!require(remotes)){
     install.packages("remotes")
@@ -40,14 +40,13 @@ This is a basic example which shows you how to solve a common problem:
 
 ```{r example}
 library(Populationpack2016)
-library(knitr)
 library(ggplot2)
 summary(Population2016)
 
 ## basic example code
 ```
 
-```{r fig-Tenants and Population, echo = FALSE, outwith="1.0\\linewidth", fig.cap="\\label{fig-Tenants  and Population} the relationship between Tenants  and Population"}
+```{r fig-Tenants-and-Population, echo = FALSE, outwith="1.0\\linewidth", fig.cap="\\label{fig-Tenants-and-Population} Relationship between Tenants  and Population"}
 ggplot(data = Population2016, aes(x = Population, y = Tenants)) +
   geom_point() +
   ggtitle("Tenants  and Population") +
@@ -57,7 +56,7 @@ ggplot(data = Population2016, aes(x = Population, y = Tenants)) +
 ```
 
 
-```{r fig-Owners and Population, echo = FALSE, outwith="1.0\\linewidth", fig.cap="\\label{fig-Owners  and Population} the relationship between Owners  and Population"}
+```{r fig-Owners-and-Population, echo = FALSE, outwith="1.0\\linewidth", fig.cap="\\label{fig-Owners-and-Population} Relationship between Owners  and Population"}
 ggplot(data = Population2016, aes(x = Population, y = Owners)) +
   geom_point() +  
   ggtitle("Owners  and Population") +
