--- a/vignettes/Populationpack2016.Rmd
+++ b/vignettes/Populationpack2016.Rmd
@@ -74,12 +74,12 @@ ggplot(data = Population2016, aes(x = OBJECTID, y = Population)) +
 
 Now we can see population density in Mashhad based on its neighbourhoods in 2016.
 
-![Population Density in Mashhad 2016](MashhadDensity.png)
+![Population Density in Mashhad 2016](mashhad-density.png)
 
 
 Also here is the illustration of whole neighbourhoods in Mashhad.
 
-![Mashhad's Neighbourhoods in 2016](MashhadNeighbours.png)
+![Mashhad's Neighbourhoods in 2016](mashhad-neighbours.png)
 
 
 Assuming that population density $\rho(r)$ at distance r from the city center declines monotonically, [@chen2008wave]reintroduce an empirical model that can be written as
